# kipubot

./: .dockerignore  .env.example  .env.sample  .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  backup.sql  bot.py  deinit_db.py  dev.Dockerfile  docker-compose.dev.yml  docker-compose.test.yml  index.ts  init_db.py  lint.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.Dockerfile
.github/workflows/: lint.yaml  main.yaml
kipubot/: __init__.py  __main__.py  bot.py  config.py  constants.py  db.py  errors.py  types.py  utils.py
kipubot/handlers/: __init__.py  _bot_added_handler.py  _close_handler.py  _dm_handlers.py  _error_handler.py  _excel_file_handler.py  _expected_value_handler.py  _graph_handler.py  _graph_handlers.py  _moro_handler.py  _no_dm_handler.py  _raffle_setup_handler.py  _start_handler.py  _winner_handler.py
src/: bot.ts  config.ts  routes.ts  types.ts
tests/: test_utils.py
tests/example_data/: example_1.xlsx
